fix: landing buttons spacing + add label

--- a/demo/src/themes/default/buttons.scss
+++ b/demo/src/themes/default/buttons.scss
@@ -57,13 +57,13 @@
     align-items: center;
     text-decoration: none;
     cursor: pointer;
-    font-variant: small-caps;
-    font-weight: 700;
-    font-size: 1.33rem;
+    font-weight: 600;
+    font-size: 1.15rem;
     padding: 0.6667rem 0.75rem;
-    padding-right: 1rem;
     border-radius: 0.25rem;
 
+    // TODO: if icon put
+    // padding-right: 1rem;
     .icon {
       margin-right: 0.5rem;
     }
